@@ -1,10 +1,14 @@
+.gitignore
 Changes
+lib/Text/Table.pm
 LICENSE
+Makefile.PL
 MANIFEST
 MANIFEST.SKIP
-Makefile.PL
+META.yml
 README
-lib/Text/Table.pm
 t/01_ini.t
 t/10_Table.t
-META.yml                                 Module meta-data (added by MakeMaker)
+t/11_Variable_Rule.t
+t/pod-coverage.t
+t/pod.t
