@@ -1,3 +1,8 @@
+use strict;
+use warnings;
+
+require 5.008;
+
 use ExtUtils::MakeMaker;
 # See lib/ExtUtils/MakeMaker.pm for details of how to influence
 # the contents of the Makefile that is written.
@@ -7,6 +12,8 @@ WriteMakefile(
     AUTHOR       => 'Anno Siegel (siegel@zrz.tu-berlin.de)',
     ABSTRACT     => 'Organize Data in Tables',
     PREREQ_PM    => {
+        'strict' => 0,
+        'warnings' => 0,
         'Test::More' => 0,
         'Text::Aligner' => 0.05,
     },
